# sd3save_editor

./: .gitignore  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  sd3save_editor.desktop  setup.py  start_gui.sh
.github/workflows/: pythonapp.yml
debian/: changelog  control  files  install  python3-sd3save-editor.triggers  rules  sd3save_editor.desktop  sd3save_editor_gui
docs/: character encoding.md  language support.md  offsets.md  offsets.org
sd3save_editor/: __main__.py  checksum.py  game_data.py  locations.py  save.py
sd3save_editor/data/: encoding_english_to_unicode.json  encoding_french_to_unicode.json  encoding_german_to_unicode.json  encoding_italian_to_unicode.json  encoding_japanese_to_unicode_fullwidth.json  encoding_japanese_to_unicode_halfwidth.json  encoding_spanish_to_unicode.json  encoding_unicode_to_english.json  encoding_unicode_to_french.json  encoding_unicode_to_german.json  encoding_unicode_to_italian.json  encoding_unicode_to_japanese.json  encoding_unicode_to_spanish.json  item_storage.json  locations.json  tracks.json
sd3save_editor/gui/: __main__.py  datatype.py  itemtabledelegate.py  main.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py
test/: SEIKEN3.srm  test_language.py  test_save.py
