[tool.poetry]
name = "sd3save-editor"
version = "0.7.0"
description = "Save editor for Seiken Densetsu 3"
authors = ["rrooij"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "sd3save_editor"}]

[tool.poetry.dependencies]
python = "^3.8"
construct = "2.10.56"
scalpl = "0.4.0"
PyQt5 = "=5.15.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
