[project]
name = "sd3save-editor"
version = "0.7.1"
description = "Save editor for Seiken Densetsu 3"
readme = "README.md"
license = { text = "GPLv3" }
authors = [
    { name = "rrooij" }
]
requires-python = ">=3.13"
dependencies = [
    "construct==2.10.70",
    "scalpl==0.4.0",
    "PyQt5==5.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
required-version = ">=0.5.0"
